# npet_extraction

./: .dockerignore  .gitignore  Dockerfile  README.html  README.md  docker-compose.yml  pyproject.toml  q_eliminate_poissonrecon.md
libnpet/: __main__.py  requirements.txt  run.py
libnpet/adapters/: riboxyz_providers.py  standalone_providers.py
libnpet/backends/: geometry.py  grid_occupancy.py  meshing.py
libnpet/core/: cache.py  config.py  interfaces.py  pipeline.py  polymer_enum.py  ribosome_types.py  run_id.py  structure_selection.py  types.py
libnpet/stages/: bootstrap.py  grid_refine.py  legacy_minimal.py  tunnel_lining.py
