[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "npet_extraction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pyvista",
    "open3d",
    "biopython",
    "scikit-learn",
    "pydantic>=2",
    "requests",
    "plyfile",
    "tqdm",
]
[project.scripts]
npet2 = "libnpet.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["libnpet*"]